Student/Resources/Challenge 9/content-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: content-api-service
  labels:
    app: content-api
spec:
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
  selector:
    app: content-api
    version: "2"
